static files added

--- a/goreba_global/static_files/css/main.css
+++ b/goreba_global/static_files/css/main.css
@@ -1,140 +1,7 @@
-/* line 2, ../../../../../PycharmProjects/goreba.global/goreba_global/static_files/scss/base/_parameters.scss */
-body {
-  color: #374794;
-  font-size: 16px;
-  font-weight: 400;
-  font-family: 'Alegreya Sans', sans-serif;
-}
-
-/* line 6, ../../../../../PycharmProjects/goreba.global/goreba_global/static_files/scss/base/_parameters.scss */
-a {
-  color: #374794;
-}
-
-/* line 9, ../../../../../PycharmProjects/goreba.global/goreba_global/static_files/scss/base/_parameters.scss */
-a:hover {
-  cursor: pointer;
-  text-decoration: none;
-}
-
-/* line 14, ../../../../../PycharmProjects/goreba.global/goreba_global/static_files/scss/base/_parameters.scss */
-.des-hr-tag {
-  border-top: 1px solid #374794;
-  margin: 10px 0px 0px 0px;
-  padding: 5px;
-}
-
-/* line 20, ../../../../../PycharmProjects/goreba.global/goreba_global/static_files/scss/base/_parameters.scss */
-.p_with_small_font {
-  font-size: 12px;
-}
-
-/* line 24, ../../../../../PycharmProjects/goreba.global/goreba_global/static_files/scss/base/_parameters.scss */
-.form-control:focus {
-  border-color: #374794 !important;
-  -webkit-box-shadow: 0px 0px 8px #374794 !important;
-  -moz-box-shadow: 0px 0px 8px #374794 !important;
-  box-shadow: 0px 0px 8px #374794 !important;
-}
-
-/* line 32, ../../../../../PycharmProjects/goreba.global/goreba_global/static_files/scss/base/_parameters.scss */
-#test-heading {
-  font-size: 24px;
-}
-
-/* line 35, ../../../../../PycharmProjects/goreba.global/goreba_global/static_files/scss/base/_parameters.scss */
-#test-title {
-  font-size: 20px;
-}
-
-/* line 38, ../../../../../PycharmProjects/goreba.global/goreba_global/static_files/scss/base/_parameters.scss */
-#test-capitals {
-  font-size: 18px;
-}
-
-/* line 41, ../../../../../PycharmProjects/goreba.global/goreba_global/static_files/scss/base/_parameters.scss */
-#test-medium-font {
-  font-size: 16px;
-}
-
-/* line 44, ../../../../../PycharmProjects/goreba.global/goreba_global/static_files/scss/base/_parameters.scss */
-#test-small-font {
-  font-size: 12px;
-}
-
-@media only screen and (max-width: 600px) {
-  /* line 49, ../../../../../PycharmProjects/goreba.global/goreba_global/static_files/scss/base/_parameters.scss */
-  #test-heading {
-    font-size: 20px;
-  }
-  /* line 52, ../../../../../PycharmProjects/goreba.global/goreba_global/static_files/scss/base/_parameters.scss */
-  #test-title {
-    font-size: 18px;
-  }
-  /* line 55, ../../../../../PycharmProjects/goreba.global/goreba_global/static_files/scss/base/_parameters.scss */
-  #test-capitals {
-    font-size: 16px;
-  }
-  /* line 58, ../../../../../PycharmProjects/goreba.global/goreba_global/static_files/scss/base/_parameters.scss */
-  #test-medium-font {
-    font-size: 12px;
-  }
-  /* line 61, ../../../../../PycharmProjects/goreba.global/goreba_global/static_files/scss/base/_parameters.scss */
-  #test-small-font {
-    font-size: 10px;
-  }
-}
-
-/* line 1, ../../../../../PycharmProjects/goreba.global/goreba_global/static_files/scss/modules/_buttons.scss */
-.des-button-primary {
-  border: 1px solid #374794;
-  padding: 8px 15px;
-  border-radius: 5px;
-  margin-right: 10px;
-}
-
-/* line 7, ../../../../../PycharmProjects/goreba.global/goreba_global/static_files/scss/modules/_buttons.scss */
-.des-button-primary:hover {
-  background-color: #374794;
-  color: #ffffff;
-}
-
-/* line 12, ../../../../../PycharmProjects/goreba.global/goreba_global/static_files/scss/modules/_buttons.scss */
-.des-button-secondary {
-  border: 1px solid #ff6347;
-  padding: 8px 15px;
-  border-radius: 5px;
-}
-
-/* line 17, ../../../../../PycharmProjects/goreba.global/goreba_global/static_files/scss/modules/_buttons.scss */
-.des-button-secondary:hover {
-  background-color: #ff6347;
-  color: #ffffff;
-}
-
-/* line 22, ../../../../../PycharmProjects/goreba.global/goreba_global/static_files/scss/modules/_buttons.scss */
-.add-to-cart {
-  border: 1px solid #374794;
-  padding: 8px 15px;
-  border-radius: 5px;
-  width: 50%;
-}
-
-/* line 28, ../../../../../PycharmProjects/goreba.global/goreba_global/static_files/scss/modules/_buttons.scss */
-.add-to-cart:hover {
-  background-color: #374794;
-  color: #ffffff;
-}
-
-/* line 1, ../../../../../PycharmProjects/goreba.global/goreba_global/static_files/scss/modules/_forms.scss */
-.form-title {
-  font-size: 24px;
-  font-weight: 600;
-  color: black;
-  margin-bottom: 20px;
-}
-
 /*
+Template Name: E-SHOP HTML E-Commerce Template
+Author: yaminncco
+
 Colors:
 	Body 		  : #4A4E5A
 	Headers 	: #30323A
