--- a/goreba_global/static_files/scss/main.scss
+++ b/goreba_global/static_files/scss/main.scss
@@ -1,27 +1,14 @@
 // Import bases
-@import 'base/_variables.scss';
-@import 'base/_parameters.scss';
+// @import 'base/_variables.scss';
+// @import 'base/_parameters.scss';
 
 // Import components
-// @import 'components/_components_base.scss';
-// @import 'components/_shop_by_departments.scss';
-// @import 'components/_why_goreba.scss';
 
 // Import layouts
-// @import 'layout/_header.scss';
-// @import 'layout/_footer.scss';
-// @import 'layout/_account.scss';
-// @import 'layout/_list-items.scss';
 
 // Import modules
-@import 'modules/_buttons.scss';
-@import "modules/_forms.scss";
+// @import 'modules/_buttons.scss';
+// @import "modules/_forms.scss";
 
 // Import pages
 @import 'pages/_legacy_css.scss';
-// @import 'pages/_product_details.scss';
-// @import "pages/_customer_profile.scss";
-// @import "pages/_static_pages.scss";
-// @import "pages/_trade_shows.scss";
-// @import "pages/_error_pages.scss";
-
