--- a/goreba_global/templates/base/scripts.html
+++ b/goreba_global/templates/base/scripts.html
@@ -1,5 +1,12 @@
 {% load static %}
 
+<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+<script type="text/javascript" src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+<script type="text/javascript" src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
+
 <!-- jQuery -->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
@@ -17,6 +24,12 @@
 
 <!-- Zoom -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-zoom/1.6.1/jquery.zoom.min.js" defer></script>
+
+<!-- html5shiv -->
+<script type="text/javascript" src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js" defer></script>
+
+<!-- respond -->
+<script type="text/javascript" src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js" defer></script>
 
 <!-- Custom main -->
 <script type="text/javascript" src="{% static 'js/script.js' %}" defer></script>
