--- a/goreba_global/templates/base/header.html
+++ b/goreba_global/templates/base/header.html
@@ -6,7 +6,7 @@
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <a class="navbar-brand logo_h" href="index.html">
-                    <img src="{% static 'img/logo.png' %}" alt="">
+                    <img src="{% static 'img/goreba_logo.png' %}" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,14 +39,14 @@
                         </li>
                         <li class="nav-item submenu dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                             aria-expanded="false">Pages</a>
+                             aria-expanded="false">My Account</a>
                             <ul class="dropdown-menu">
                                 <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
                                 <li class="nav-item"><a class="nav-link" href="tracking.html">Tracking</a></li>
                                 <li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+<!--                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>-->
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li class="nav-item"><a href="#" class="cart"><span class="ti-bag"></span></a></li>
