--- a/goreba_global/templates/home/modules/related_products.html
+++ b/goreba_global/templates/home/modules/related_products.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <!-- Start related-product Area -->
-<section class="related-product-area section_gap_bottom">
+<section class="related-product-area">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-6 text-center">
