--- a/goreba_global/templates/base/base.html
+++ b/goreba_global/templates/base/base.html
@@ -15,7 +15,7 @@
         <!-- meta character set -->
         <meta charset="UTF-8">
         <!-- Site Title -->
-        <title>{% block head_title %}{% endblock %}</title>
+        <title>{% block title %}Goreba - Beautifully Crafted Gifts for your loved one and for yourself {% endblock %}</title>
 
         {% include 'base/styles.html' %}
     </head>
