--- a/goreba_global/templates/base/header.html
+++ b/goreba_global/templates/base/header.html
@@ -5,7 +5,7 @@
         <nav class="navbar navbar-expand-lg navbar-light main_box">
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
-                <a class="navbar-brand logo_h" href="index.html">
+                <a class="navbar-brand logo_h" href="{% url 'home' %}">
                     <img src="{% static 'img/goreba_logo.png' %}" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
